--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -1,5 +1,12 @@
 # Clustering of Selection Statistics
 
+<!--
+the upper_sig_stats and  lower_sig_stats have a window size of 100 kb so therefore the genes that it says are in those windows might not apply to the 10 kb windows used for the clustering
+
+-->
+
+** make sure all results are up-to-date **
+
 ```{r, include = FALSE, echo = FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 library(knitr)
@@ -71,7 +78,7 @@ Here we investigate genetic selection of serum urate in Polynesian populations a
 
 ### Frequency Spectrum
 
-Tajima's _D_, Fay and Wu's _H_, Fu and Li's _D_, Fu and Li's _F_, Zeng's _E_, and F~ST~ were all calculated using PopGenome v2.2.3 [@Pfeifer2014] for each entire chomomsome. Excepting F~ST~, these statistics were also calculated using a window size of 100 kb and a slide of 10 kb for each entire chromosome. A filter to remove windows containing fewer than 4 segregating sites was applied. Windows were then updated to have the central 10 kb used as coordinates for the boundary to the window. For each selection test statistic, windows were ordered by test statistic value and the most extreme 1% of values were selected from each tail of the distribution. For the windowed  approach, hierarchical clustering was then performed on a binary matrix derived from the presence or absence of the windows across all populations. Hierarchical clustering using the whole chromosome values used the statistic value itself to create the distance matrix. The distance measure used was euclidean distance and the linkage criteria was complete linkage for both sets of clustering. Accuracy of the clustering was assessed by descending the dendrogram until there 6 groups could be made and then calculating the maximum proportion of the individual populations of the same super population assigned to the same cluster. Exclusivity of each cluster was calculated using the proportion of populations from a given super population compared to the total number of individual populations assigned that cluster. F~ST~ was calculated pairwise for all populations for each chromosome.
+Tajima's _D_, Fay and Wu's _H_, Fu and Li's _D_, Fu and Li's _F_, Zeng's _E_, and F~ST~ were all calculated using PopGenome v2.2.3 [@Pfeifer2014] for each entire chromosome. Excepting F~ST~, these statistics were also calculated using a window size of 100 kb and a slide of 10 kb for each entire chromosome. A filter to remove windows containing fewer than 4 segregating sites was applied. Windows were then updated to have the central 10 kb used as coordinates for the boundary to the window. For each selection test statistic, windows were ordered by test statistic value and the most extreme 1% of values were selected from each tail of the distribution. For the windowed  approach, hierarchical clustering was then performed on a binary matrix derived from the presence or absence of the windows across all populations. Hierarchical clustering using the whole chromosome values used the statistic value itself to create the distance matrix. The distance measure used was euclidean distance and the linkage criteria was complete linkage for both sets of clustering. Accuracy of the clustering was assessed by descending the dendrogram until there 6 groups could be made and then calculating the maximum proportion of the individual populations of the same super population assigned to the same cluster. Exclusivity of each cluster was calculated using the proportion of populations from a given super population compared to the total number of individual populations assigned that cluster. F~ST~ was calculated pairwise for all populations for each chromosome.
 
 ### Haplotypic
 
@@ -80,7 +87,7 @@ Tajima's _D_, Fay and Wu's _H_, Fu and Li's _D_, Fu and Li's _F_, Zeng's _E_, an
 
 ### Disease Associated Genes
 
-Disease associated markers and their annotated genes were downloaded from the \gls{gwas} catalog^[https://www.ebi.ac.uk/gwas/, accessed 19 June 2017] [@MacArthur2017]  and filtered for assocation (P < 5x10^-8^). See Table \@ref(tab:gwascataccess)  for a complete list of SNPs and references. Gene lists were then created for each of the following diseases or traits; urate and gout, \gls{t2d}, obesity, and metabolic syndrome by filtering the study disease trait on keywords. Table \@ref(tab:gwascatref) shows source disease trait and reference used to create categories of gene lists for gout/urate, obesity, \gls{t2d}, and metabolic syndrome. Selection test statistics values for each population were centred using the population median. The gene lists from these categories were used in Section \@ref(genelistcluster) for hierarchical clustering using the selection test statistic values for windows that intersected these gene regions. Complete linkage and euclidean distance was used for the clustering.
+Disease associated markers and their annotated genes were downloaded from the \gls{gwas} catalog^[https://www.ebi.ac.uk/gwas/, accessed 19 June 2017] [@MacArthur2017]  and filtered for association (P < 5x10^-8^). See Table \@ref(tab:gwascataccess)  for a complete list of SNPs and references. Gene lists were then created for each of the following diseases or traits; urate and gout, \gls{t2d}, obesity, and metabolic syndrome by filtering the study disease trait on keywords. Table \@ref(tab:gwascatref) shows source disease trait and reference used to create categories of gene lists for gout/urate, obesity, \gls{t2d}, and metabolic syndrome. Selection test statistics values for each population were centred using the population median. The gene lists from these categories were used in Section \@ref(genelistcluster) for hierarchical clustering using the selection test statistic values for windows that intersected these gene regions. Complete linkage and euclidean distance was used for the clustering.
 
 (ref:gwascataccess) https://www.ebi.ac.uk/gwas/, accessed 19 June 2017
 
@@ -581,7 +588,7 @@ names(obesity) <-  c('mat_d','prop')
 names(metsyn) <-  c('mat_d','prop')
 ```
 
-Overall, gene lists derived from \gls{gwas} associations clustered the individual populations into their super population groupings. There were varying levels of super population proportions and exclusivity of clusters (Table \@ref(tab:proportion) and \@ref(tab:exclusivity)). The Polynesian populations were clustered together with \gls{fwh}, \gls{td}, and \gls{ze} and in the majority of clusterings (17/20) they were exclusive. This pattern was also similar with the \gls{eas} populations (16/20). For the clusters that contained the entirety of a super population, half the groupings for the entire Polynesian super population were exclusive. Three quarters of the groupings for each of the AFR and EAS super populations were exclusive and grouped the super population in their entirety.
+Overall, gene lists derived from \gls{gwas} associations clustered the individual populations into their super population groupings. There were varying levels of super population proportions and exclusivity of clusters (Table \@ref(tab:proportion) and \@ref(tab:exclusivity)). The Polynesian populations were clustered together with \gls{fwh}, \gls{td}, and \gls{ze} and in the majority of clustering (17/20) they were exclusive. This pattern was also similar with the \gls{eas} populations (16/20). For the clusters that contained the entirety of a super population, half the groupings for the entire Polynesian super population were exclusive. Three quarters of the groupings for each of the AFR and EAS super populations were exclusive and grouped the super population in their entirety.
 
 Comparing the gene lists by statistic, for all selection statistics and gene lists the populations of the \gls{sas} super population were all clustered together, although often with poor exclusivity. The \gls{eur} super population, with the exception of \gls{fld}, was clustered entirely together but with a ranging degree of exclusivity across the different selection test statistics. \Gls{td}, \gls{fwh}, and \gls{ze} clustered all the super populations in their entirety although the \gls{amr} populations were split. The clustering of super populations were not specific to the gene lists associated with urate, gout, obesity, \gls{t2d} or, metabolic syndrome but were also seen with lists for genes associated with Alzheimer's disease, Parkinson's disease, age-related macular degeneration, and colerectal cancer (data not shown).
 
@@ -666,7 +673,7 @@ The GWAS catalog had `r length(unique(obesity_GR$SYMBOL))` genes associated with
 
 There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` of the obesity associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. There were a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` genes that had a window in any Polynesian population that met the significance threshold. 
 
-In the lower tail there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` loci with at least one window that was significant in the Polynesian populations. _ADAMTSL3_, _AGBL4_, _ARL15_, _CCR3_, _CREB1_, _DNAH10_, _ERBB4_, _FER_, _FHIT_, _GRID1_, _KCTD19_, _LTBP1_, _MAP2K5_, _NEGR1_, _RASA2_, and _ZBTB38_ each had in all Polynesian populations, at least one statistic that wmet the significance threshold in the lower tail. The upper tail had a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` loci that had at least a window that was significant in the Polynesian populations. _ADCY3_, _CHST8_, _CMIP_, _COL6A5_, _DNAJC27_, _ERBB4_, _FER_, _FHIT_, _FLJ33534_, _FTO_, _GRID1_, _HLA-DRB5_, _HMGA2_, _ITGB6_, _LRP1B_, _LTBP1_, _MAF_, _NEGR1_, _NRXN3_, _NT5C2_, _PARK2_, _POC5_, _PRKCH_, _RARB_, _SPATA5_, _TCF7L2_, and _VEGFA_ each had in all Polynesian populations, at least one statistic that met the significance threshold in the upper tail. 
+In the lower tail there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` loci with at least one window that was significant in the Polynesian populations. _ADAMTSL3_, _AGBL4_, _ARL15_, _CCR3_, _CREB1_, _DNAH10_, _ERBB4_, _FER_, _FHIT_, _GRID1_, _KCTD19_, _LTBP1_, _MAP2K5_, _NEGR1_, _RASA2_, and _ZBTB38_ each had in all Polynesian populations, at least one statistic that met the significance threshold in the lower tail. The upper tail had a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` loci that had at least a window that was significant in the Polynesian populations. _ADCY3_, _CHST8_, _CMIP_, _COL6A5_, _DNAJC27_, _ERBB4_, _FER_, _FHIT_, _FLJ33534_, _FTO_, _GRID1_, _HLA-DRB5_, _HMGA2_, _ITGB6_, _LRP1B_, _LTBP1_, _MAF_, _NEGR1_, _NRXN3_, _NT5C2_, _PARK2_, _POC5_, _PRKCH_, _RARB_, _SPATA5_, _TCF7L2_, and _VEGFA_ each had in all Polynesian populations, at least one statistic that met the significance threshold in the upper tail. 
 
 <!--
 - td excellent groupings, mxl/pel on their own and clm/pur with eur. exclusivity was also pretty much perfect. ep/wp split
@@ -715,7 +722,7 @@ multiplot(gene_dendros(gene_data = t2d$mat_d$Tajima.D[,-1:-3]) + ggtitle("Tajima
    cols = 2)
 ```
 
-The GWAS catalog had `r length(unique(t2d_GR$SYMBOL))` genes associated with \gls{t2d}, this was represented by `r nrow(t2d$mat_d$Tajima.D)` windows. Except for \gls{fld}, clustering of the \gls{t2d} associated genes grouped the individual populations into their super population groups. For all clusterings the \gls{amr} populations were split, with \gls{clm} and \gls{pur} grouped with the \gls{eur} populations for \gls{td}, \gls{fwh}, and \gls{ze} (Figure \@ref(fig:t2ddendros)). The \gls{pol} populations were assigned two exclusive groups through the cutree method that created an Eastern/Western Polynesian split for \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}. \gls{fld} had the Eastern Polynesian populations with the \gls{eur} populations. \gls{fwh} and \gls{ze} had a similar pattern to the groupings of the whole chromosome F~ST~ clustering.
+The GWAS catalog had `r length(unique(t2d_GR$SYMBOL))` genes associated with \gls{t2d}, this was represented by `r nrow(t2d$mat_d$Tajima.D)` windows. Except for \gls{fld}, clustering of the \gls{t2d} associated genes grouped the individual populations into their super population groups. For all clustering the \gls{amr} populations were split, with \gls{clm} and \gls{pur} grouped with the \gls{eur} populations for \gls{td}, \gls{fwh}, and \gls{ze} (Figure \@ref(fig:t2ddendros)). The \gls{pol} populations were assigned two exclusive groups through the cutree method that created an Eastern/Western Polynesian split for \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}. \gls{fld} had the Eastern Polynesian populations with the \gls{eur} populations. \gls{fwh} and \gls{ze} had a similar pattern to the groupings of the whole chromosome F~ST~ clustering.
 
 There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` \gls{t2d} associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. There were a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` genes that had a significant window in any Polynesian population. In the lower tail there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` loci with at least a window that met the significance threshold in the Polynesian populations. _ADAM30_, _ARL15_, _IRS1_, _MACF1_, _NOTCH2_, _RREB1_, _THADA_, and _TLE4_ each had in all Polynesian populations, at least one statistic that was significant in the lower tail. _CAMK1D_, _FTO_, _HLA-B_, _HMGA2_, _HNF1B_, _INS-IGF2_, _IRS1_, _ITGB6_, _MIR4686_, _POU5F1_, _PPP2R2C_, _PTPRD_, _RBMS1_, _SGCG_, _TCF19_, _TCF7L2_, _THADA_, _UBE2E2_, _ZMIZ1_ each had in all Polynesian populations, at least one statistic that was significant in the upper tail. There were a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` loci that had at least a window that met the significance threshold in the upper tail.
 
@@ -872,7 +879,7 @@ bind_rows(list(
 
 _Summary of Results_
 
-Overall, it was found that the the selection test statistics were not effective at clustering the individual populations into their super populations groups and did not resemble the grouping that clustering on F~ST~ produced. Using windows from the extremes of the distribution was effective at clustering the individual populations into their super population groups. \gls{fwh} was the only statistic that grouped all individual populations into their corresponding super populations, whereas \gls{td} and \gls{ze} had the same split of the \gls{amr} populations as with the F~ST~ clustering. The haplotypic based methods of \gls{ihs} and \gls{nsl} clustered into super populations and had the \gls{amr} population split too. There was not a high amount of region sharing outside of each super population. Clustering from gene lists consistently grouped the individual populations into their super populations although there was inconsistency for the \gls{amr} populations. With the exception of the \gls{amr} populations, the clustering of populations using windows or haplotypes was consistent with the results in @1KGP2015snp (Supplementary table 5). 
+Overall, it was found that the clustering of selection test statistics for entire chromosomes did not resemble the grouping that clustering on F~ST~ produced. However, using windows from the extremes of the distribution was effective at clustering the individual populations into their super population groups. \gls{fwh} was the only statistic that grouped all individual populations into their corresponding super populations, whereas \gls{td} and \gls{ze} had the same split of the \gls{amr} populations as with the F~ST~ clustering. The haplotypic based methods of \gls{ihs} and \gls{nsl} clustered into super populations and had the \gls{amr} population split too. There was not a high amount of region sharing outside of each super population. Clustering from gene lists consistently grouped the individual populations into their super populations although there was inconsistency for the \gls{amr} populations. With the exception of the \gls{amr} populations, the clustering of populations using windows or haplotypes was consistent with the results in the @1KGP2015snp (Supplementary table 5). 
 
 <!--windows
 correct:
@@ -882,42 +889,30 @@ fld: lower split amr, upper only clustered afr, eas, and sas entirely
 flf: lower split amr, nzm/mxl/pel. upper split amr clustered others
 ze: both split amr, clustered others
 -->
-It is difficult to apply a biological interpretation onto what the clustering of the most extreme windows represents other than a similarity in allele frequencies between populations that have a pattern that is consistent with the out of Africa model [@ref].
-The extremes of the distributions represent different types of selection or demographic events and are different depending on the selection test statistic being used. The upper end of the distribution is largely able to be compared as all of the values that it encompassed were positive in value across all populations for all statistics. The lower extreme however was a mix of negative and positive values, with the positive values mostly from the \gls{afr} populations. This mix means that the windows from one population do not nesscessarily represent the same selective or demographic even component and thus are not able to be compared.
+It is difficult to apply a biological interpretation onto what the clustering of the most extreme windows represents other than a similarity in allele frequencies between populations that have a pattern that is consistent with the out of Africa model [@ref]. The extremes of the distributions represent different types of selection or demographic events and are different depending on the selection test statistic being used [@ref]. The upper end of the distribution is able to be compared as all of the values that it encompassed were positive in value across all populations for all statistics and represent the same types of selection or demography. The lower extreme however was a mix of negative and positive values, with the positive values mostly from the \gls{afr} populations. This mix means that the windows from one population do not necessarily represent the same selective or demographic event component and thus are not directly comparable.
 
 The simplest reason that explains the similar clustering that occurred with the gene lists is that for the tests of selection that rely on the frequency spectrum, populations that are similar have a similar allele frequency to each other. This would explain why with \gls{td}, \gls{fwh}, and \gls{ze}, which are based on comparing ratios of low, intermediate and high frequency variants, that they all grouped the individual populations into their super population groups. This differed to the statistics based on singletons (\gls{fld} and \gls{flf}) which did not often group the super populations.
 
-Haplotypic
+Under a neutral model the differences in allele frequency are due to genetic drift [@ref; @kimura1979neutral]. Demographic events such as bottleneck, migration, expansion, and admixture also contribute to the differences in allele frequencies found between populations [@ref; @Wright1951]. Selection on the other hand acts in a targeted manner so therefore if the selection occurred post population split then it should look neutral in one population but not in the other, however if the selective event happened in an ancestral population of the two then dependent on time since divergence, it would be expected to be observed in both populations [@ref].
+
+However, what was observed was the populations being clustered into their super populations. This would indicate that a) this was an ancient selective event prior to the populations diverging and subsequent population specific recombination [@ref]. Or b) there was no selective event and the change in allele frequencies due to drift after population divergences was enough to distinguish the populations from each other [@ref]. There were only a few loci from the gene lists that had met the thresholds for significance to indicate possible selection, this would indicate that the most likely explanation is drift was responsible for the differences in allele frequency. This can be seen in the fact that the populations from each super population had similar distributions of the selection statistics but these distributions where shifted compared to the other super populations. It was for this reason that the gene list clustering using the actual values needed to be centered using the population median. The fact that the other disease gene lists for diseases that are late onset and thus have minimal selective pressure on reproductive success, also exhibited the same group clustering.
 
 
-
-clustering on actual values because the stats are based on the underlying frequency distribution are likely to reflect this distribution and not the actual state of selection - therefore I would assume that given any list of genes sufficiently long (say >10), that the population clusters would appear. If the selection event occurred post out of Africa, then there would be some expectation that the clustering would. 
-
-using median centering was required as each population had their own distribution.
-
-
-
-Under a neutral model the differences in allele frequency are due to genetic drift [@ref; @kimura1979neutral]. Demographic events such as bottleneck, migration, expansion, and admixture also contribute to the differences in allele frequencies found between populations [@ref; @Wright1951]. Selection on the other hand acts in a targeted manner so therefore if the selection occurred post population split then in should look neutral in one population but not in the other, however if the selective event happened in an ancestral population of the two then dependent on time, it should show up in both populations [@ref].
-
-However, what was observed was the populations being clustered into their super populations. This would indicate that a) this was an ancient selective even prior to the populations splitting and the subsequent population specific recombination. Or b) 
-
-_Admixture_
-
-The cutree method used to assess the proportions and exclusivity of the clustering was relatively crude and did not always match the clusters that were visible in the dendrogram. The use of k = 6 was due to there being 6 super populations, however, \gls{clm}, \gls{pur}, \gls{mxl}, and \gls{pel} being classed as a single super population was not reflected in the clustering. Many of the selection tests split \gls{amr} into 2 groups, CLM/PUR and MXL/PEL. This pairing is consistent with what had previously been found from similarity of admixture and F~ST~ [@Gravel2013; @Auton2015 ]. These \gls{amr} populations had also been identified as being admixed and so it was interesting that for upper tail for both Fu and Li's _D_ and _F_ they were clustered with the \gls{nzm} population which is also know to be admixed, mostly with New Zealand Caucasian [@Hollis-Moffatt2012; @Gravel2013]. 
-
-
-
-_Limitiations_
+ _Limitiations_
 
 - use of chip
 - non-imputed
 
-\gls{flf} and \gls{fld} had a very sparse lower tail, this would influence how well the clustering did. At the extremes of similarity, the clusters are determined by only a few differences which means a large amount of information is not being used for the descision. As the lower tail represents and excess of singletons this is likely to have been impacted on by using chip data as there was a very strong bias against them during the quality control protocol [@Guo2014]. In this situation because the data has a reduced singletons, the distribution for \gls{fld} and \gls{flf} is shifted to the right, with the upper tail representing a deficit of singletons [@Fu1993]. This shift now means there is an under representation of regions in the lower tail and the clustering was no better than drawing regions at random.
+Both \gls{flf} and \gls{fld} had a very sparse lower tail and this would influence how well the clustering did. At the extremes of similarity (e.g. very similar or very dissimilar), the clusters are determined by only a few differences which means a large amount of information is not being used for the decision. As the lower tail represents and excess of singletons this is likely to have been impacted on by using chip data as there was a very strong bias against them during the quality control protocol [@Guo2014]. In this situation because the data has a reduced singletons, the distribution for \gls{fld} and \gls{flf} is shifted to the right, with the upper tail representing a deficit of singletons [@Fu1993]. This shift now means there is an under representation of regions in the lower tail and the clustering was no better than drawing regions at random.
 
 The choice of out-group for \gls{fwh} can also have an effect as it is used to root the tree <!-- is it or is it used to work out what the frequency is? -->. In this case the out-group was a single sample created that was homozygote for the ancestral allele
 
+The cutree method used to assess the proportions and exclusivity of the clustering was relatively crude and did not always match the clusters that were visible in the dendrogram. The use of k = 6 was due to there being 6 super populations, however, \gls{clm}, \gls{pur}, \gls{mxl}, and \gls{pel} being classed as a single super population was not reflected in the clustering. Many of the selection tests split \gls{amr} into 2 groups, CLM/PUR and MXL/PEL. This pairing is consistent with what had previously been found from similarity of admixture and F~ST~ [@Gravel2013; @Auton2015 ]. These \gls{amr} populations had also been identified as being admixed and so it was interesting that for upper tail for both Fu and Li's _D_ and _F_ they were clustered with the \gls{nzm} population which is also know to be admixed, mostly with New Zealand Caucasian [@Hollis-Moffatt2012; @Gravel2013].
 
 
+urate has a relationship with AD and PD see @Latourte2017 for more info
+
+<!--
 - **what does this answer??**
 - using the chromosome wide results did not always return the super clusters.
 - often see admixed amr pops grouped with nzm/cim
@@ -940,6 +935,7 @@ Diseases with a late on-set were chosen as these should have little to no select
 
 
 
+clustering on actual values because the stats are based on the underlying frequency distribution are likely to reflect this distribution and not the actual state of selection - therefore I would assume that given any list of genes sufficiently long (say >10), that the population clusters would appear. If the selection event occurred post out of Africa, then there would be some expectation that the clustering would. 
 
 
 
@@ -958,7 +954,7 @@ bind_rows(list(
 
 ```
 
-```{r}
+```{r, eval = FALSE}
 bind_rows(list(
   bind_rows(lapply(names(gout[[2]]), function(x){gout[[2]][[x]]$super_prop %>% spread(super, max_prop)%>% mutate(stat = x) %>% select(NCOL(.), 1:(NCOL(.)-1)) })) %>% mutate(Disease = 'Urate/Gout'),
 
